--- a/WEEK 1/index.html
+++ b/WEEK 1/index.html
@@ -78,13 +78,11 @@
     <section id="about">
         <h2>About Me</h2>
         <p>My name is Taylor Plovanich, and I am a junior at the University of Montana Online, majoring in Media Arts. My expected graduation date is Spring 2026. My journey includes creating projects that integrate animation, storytelling, and design. I draw inspiration from everyday life, art, and the evolving field of technology. Some of my notable projects include interactive Twine stories and unique digital art pieces created with Adobe Illustrator and After Effects.</p>
-        <p>I am a proud member of the university’s Media Arts Association and have been honored with the Creative Innovator Award for my contributions to digital storytelling.</p>
-    </section>
 
     <section id="interests">
         <h2>Interests and Gaming Memories</h2>
-        <p>One of my fondest memories is playing <em>The Legend of Zelda: Ocarina of Time</em> as a child. It taught me the value of perseverance, exploration, and problem-solving. Today, I still find joy in games that challenge my creativity and critical thinking. I believe games can help us solve real-world problems by simulating scenarios, encouraging collaboration, and inspiring new ways of thinking.</p>
-        <p>Outside of gaming, I enjoy hiking in the mountains of Montana, experimenting with new art techniques, and exploring the potential of virtual and augmented reality in storytelling.</p>
+        <p>One of my fondest memories is playing <em>Paper Mario</em> on the Nintendo 64 as a child.I was in the 5th grade when it released. It was the first game I had ever anticipated the arrival for. It didn't disappoint. It taught me the value of perseverance, exploration, and problem-solving. Today, I still find joy in games that challenge my creativity and critical thinking. I believe games can help us solve real-world problems by simulating scenarios, encouraging collaboration, and inspiring new ways of thinking.</p>
+        <p>Outside of gaming, I enjoy hiking in the mountains of Montana, well, anything outdoorsy, and being with family and friends.</p>
     </section>
 
     <footer>
