--- a/WEEK 1/index.html
+++ b/WEEK 1/index.html
@@ -72,7 +72,7 @@
 
     <section id="theme">
         <h2>What I See When I Look at the World</h2>
-        <p>When I look at the world, I see a complex interplay of beauty, challenges, and potential. Our planet is full of vibrant colors, diverse cultures, and innovative ideas. However, it also faces significant issues such as climate change, inequality, and the need for more meaningful connections. I believe games can be a tool to inspire empathy, problem-solving, and awareness, bringing people together to tackle some of these challenges.</p>
+        <p>When I look at the world, I see a boundless realm of infinite possibilities. It is a place filled with vibrant colors, diverse cultures, and endless innovation. Every person alive is a miracle. Each person truly has the power to create good and beauty. As it relates to games, I believe games have the power to unlock human potential, inspiring empathy, fostering problem-solving, and uniting people to imagine and build a brighter future.</p>
     </section>
 
     <section id="about">
