--- a/HW-2/index.html
+++ b/HW-2/index.html
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Homework Page</h1>
-    <p>Check the console for the logged information!</p>
+    <h1>Welcome to My Homework 2 Page</h1>
+    <p>Check the console for this weeks info/assignment</p>
 
     <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
