--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choose Your Adventure</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Choose Your Adventure!</h1>
+    <h1>JavaScript Game</h1>
     <p id="story-text">You find yourself at the edge of a mysterious forest. What will you do?</p>
     <button onclick="choosePath('left')">Take the left path</button>
     <button onclick="choosePath('right')">Take the right path</button>
