--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>JavaScript Game</h1>
-    <p id="story-text">You find yourself at the edge of a mysterious forest. What will you do?</p>
-    <button onclick="choosePath('left')">Take the left path</button>
-    <button onclick="choosePath('right')">Take the right path</button>
-    <button onclick="choosePath('forward')">Walk forward</button>
+    <h1>The Gas Tank Dilemma</h1>
+    <p id="story-text">You're driving down the highway when your gas light turns on. Your tank is almost empty. Do you stop to fill it up, or keep driving and hope for the best?</p>
+    <button onclick="choosePath('fillUp')">Stop and fill up</button>
+    <button onclick="choosePath('ignore')">Ignore it and keep driving</button>
     <script src="script.js"></script>
 </body>
 </html>
