--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose Your Adventure</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Interactive Story</title>
+    <script src="script.js" defer></script>  
+    <link rel="stylesheet" href="style.css">  
 </head>
 <body>
-    <h1>The Gas Tank Dilemma</h1>
-    <p id="story-text">You're driving down the highway when your gas light turns on. Your tank is almost empty. Do you stop to fill it up, or keep driving and hope for the best?</p>
-    <button onclick="choosePath('fillUp')">Stop and fill up</button>
-    <button onclick="choosePath('ignore')">Ignore it and keep driving</button>
-    <script src="script.js"></script>
+    <h1>Choose Your Own Adventure</h1>
+    <div id="story-text">
+        <!-- Initial story text -->
+        You are driving on a long road trip, and your gas light just came on. What will you do next?
+    </div>
+    <button onclick="choosePath('fillUp')">Fill up the gas tank</button>
+    <button onclick="choosePath('ignore')">Ignore the gas light</button>
 </body>
 </html>
