--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -15,5 +15,7 @@
     </div>
     <button onclick="choosePath('fillUp')">Fill up the gas tank</button>
     <button onclick="choosePath('ignore')">Ignore the gas light</button>
+    <button onclick="choosePath('Choose to Take a scenic route')">Choose to Take a scenic route</button>
+    <button onclick="choosePath('Choose to Take a detour')">Choose to Take a detour</button>
 </body>
 </html>
