--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">  
 </head>
 <body>
-    <h1>Choose Your Own Adventure</h1>
+    <h1>Gas Tank Dilemma</h1>
     <div id="story-text">
         <!-- Initial story text -->
         You are driving on a long road trip, and your gas light just came on. What will you do next?
