--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -21,8 +21,12 @@
         <button onclick="choosePath('ignore')">Ignore the gas light</button>
     </div>
 
-    <!-- Story Image (Changes based on choices) -->
-    <img id="story-image" src="images/pic1.jpg" alt="Story Scene" width="300">
+    <!-- Container for images -->
+    <div id="image-container">
+        <img id="story-image" src="images/pic1.jpg" alt="Story Scene" width="300">
+        <img id="image2" src="images/pic2.jpg" alt="Story Scene 2" width="300">
+        <img id="image3" src="images/pic3.jpg" alt="Story Scene 3" width="300">
+    </div>
 
 </body>
 </html>
