--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Gas Tank Dilemma</h1>
 
+    <!-- Background audio -->
+    <audio id="background-audio" loop autoplay>
+        <source src="audio/Waste of Time-NightStop.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <!-- Story Text -->
     <div id="story-text">
         You are driving on a long road trip, and your gas light just came on. What will you do next?
