--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -33,7 +33,7 @@
 
     <!-- Audio for background music -->
     <audio id="background-audio" loop>
-        <source src="audio/background-music.mp3" type="audio/mp3">
+        <source src="audio/Waste of Time-NightStop.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
