--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -28,5 +28,10 @@
         <img id="image3" src="images/pic3.jpg" alt="Story Scene 3" width="300">
     </div>
 
+    <!-- Sound effect for button clicks -->
+    <audio id="click-sound">
+        <source src="audio/stab-f-01-brvhrtz-224599.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
