--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
     <h2 id="story">You wake up in an abandoned barn. What do you do?</h2>
+    <p>Type one of the options below and press submit:</p>
+    <ul>
+        <li>Look around</li>
+        <li>Open door</li>
+        <li>Climb ladder</li>
+        <li>Check stalls</li>
+        <li>Call out</li>
+    </ul>
     <input type="text" id="choice" placeholder="Enter your choice">
     <button onclick="playGame()">Submit</button>
     <button onclick="restartGame()">Restart</button>
