--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -15,9 +15,6 @@
     <ul>
         <li>Look around</li>
         <li>Open door</li>
-        <li>Climb ladder</li>
-        <li>Check stalls</li>
-        <li>Call out</li>
     </ul>
     <input type="text" id="choice" placeholder="Enter your choice">
     <button onclick="playGame()">Submit</button>
@@ -25,6 +22,6 @@
     <br>
     <img id="image" src="barn.jpg" alt="Barn scene">
 
-    <script src="script.js"></script> <!-- External JS File -->
+    <script src="script.js"></script>
 </body>
 </html>
