--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -12,7 +12,7 @@
 <body>
     <h2 id="story">You wake up in an abandoned barn. What do you do?</h2>
     <p>Type one of the options below and press submit:</p>
-    <ul>
+    <ul id="options">
         <li>Look around</li>
         <li>Open door</li>
     </ul>
