--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -21,7 +21,7 @@
     <button onclick="playGame()">Submit</button>
     <button onclick="restartGame()">Restart</button>
     <br>
-    <img id="image" src="barn.jpg" alt="Barn scene">
+    <img id="image" src="images/barn.jpg" alt="Barn scene">
 
     <script src="script.js"></script>
 </body>
