--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -13,8 +13,8 @@
 <body>
     <h2 id="story">You wake up in an abandoned barn. What do you do?</h2>
     
-    <button onclick="playGame('look around')">Look around</button>
-    <button onclick="playGame('open door')">Open door</button>
+    <button id="lookAroundButton">Look around</button>
+    <button id="openDoorButton">Open door</button>
     
     <br>
     <img id="image" src="images/barn.jpg" alt="Barn scene">
