--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -7,15 +7,15 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #222; color: white; }
         #image { width: 300px; height: 200px; margin-top: 20px; border: 2px solid white; }
-        button { margin: 10px; padding: 8px; }
+        input, button { margin: 10px; padding: 8px; }
     </style>
 </head>
 <body>
     <h2 id="story">You wake up in an abandoned barn. What do you do?</h2>
     
-    <!-- Initial choices -->
-    <button onclick="playGame('look around')">Look around</button>
-    <button onclick="playGame('open door')">Open door</button>
+    <input type="text" id="choice" placeholder="Enter your choice">
+    <button onclick="playGame()">Submit</button>
+    <button id="restart" style="display:none" onclick="restartGame()">Restart</button>
     
     <br>
     <img id="image" src="images/barn.jpg" alt="Barn scene">
