--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -7,6 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #222; color: white; }
         input, button { margin: 10px; padding: 8px; }
+        #image { width: 300px; height: 200px; margin-top: 20px; border: 2px solid white; }
     </style>
 </head>
 <body>
@@ -19,6 +20,9 @@
 
     <p><strong>Choices:</strong></p>
     <p id="choices-text">Type 'look around' or 'open door'.</p>
+
+    <!-- Image displayed based on choices -->
+    <img id="image" src="images/barn.jpg" alt="Barn scene">
 
     <script src="script.js"></script>
 </body>
