--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -15,7 +15,7 @@
 
     <!-- User input for choices -->
     <input type="text" id="choice" placeholder="Type your choice">
-    <button onclick="makeChoice()">Submit</button>
+    <button id="submit">Submit</button>
     <button id="restart" style="display:none" onclick="restartGame()">Restart</button>
 
     <p><strong>Choices:</strong></p>
@@ -25,5 +25,21 @@
     <img id="image" src="images/barn.jpg" alt="Barn scene">
 
     <script src="script.js"></script>
+
+    <script>
+        document.getElementById("submit").addEventListener("click", function() {
+            let userInput = document.getElementById("choice").value.trim().toLowerCase();
+
+            while (userInput === "") {
+                userInput = prompt("Please enter a choice:").trim().toLowerCase();
+            }
+
+            makeChoice(userInput);
+        });
+
+        function showRestartButton() {
+            document.getElementById("restart").style.display = "inline"; 
+        }
+    </script>
 </body>
 </html>
