--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <h1>Memory Matching Game</h1>
+    <h1>Test your memory</h1>
     <div id="game-board"></div>
 
     <script src="script.js"></script>
