--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual ViewMaster</title>
+    <title>ViewMaster</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Virtual ViewMaster</h1>
+    <h1>ViewMaster</h1>
     <div id="viewer">
         <img id="image" src="" alt="ViewMaster Image">
         <h2 id="title">Title</h2>
