--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -10,11 +10,9 @@
 <body>
     <h1>ViewMaster</h1>
     <div id="viewer">
-        <img id="image" src="" alt="ViewMaster Image">
-        <h2 id="title">Title</h2>
-        <p id="description">Description</p>
-        <p><strong>Author:</strong> <span id="author"></span></p>
-        <p><strong>Year:</strong> <span id="year"></span></p>
+       
+        <h2 id="title">Start</h2>
+       
     </div>
     <button onclick="showRandomImage()">Next Image</button>
     <script src="script.js"></script>
