--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1>ViewMaster</h1>
     <div id="viewer">
-       
+        <img id="image" src="" alt="ViewMaster Image">
         <h2 id="title">Start</h2>
-       
+        <p id="description"></p>
+         <span id="author"></span></p>
+        <span id="year"></span></p>
     </div>
     <button onclick="showRandomImage()">Next Image</button>
     <script src="script.js"></script>
