--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -18,7 +18,8 @@
     </style>
 </head>
 <body>
-    <h1>Bouncing Ball Madness</h1>
+    <h1>Wall Ball</h1>
+    <h2>Use arrow keys to move</h2>
     <canvas id="gameCanvas" width="500" height="300"></canvas>
     <audio id="bgMusic" loop autoplay>
         <source src="audio/Waste of Time-NightStop.mp3" type="audio/mp3">
