--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -21,9 +21,12 @@
     <h1>Wall Ball</h1>
     <h2>Use arrow keys to move</h2>
     <canvas id="gameCanvas" width="500" height="300"></canvas>
-    <audio id="bgMusic" loop autoplay>
+    
+    <!-- Audio element -->
+    <audio id="bgMusic" loop>
         <source src="audio/Waste of Time-NightStop.mp3" type="audio/mp3">
     </audio>
+
     <script src="script.js"></script>
 </body>
 </html>
