--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -20,6 +20,7 @@
 <body>
     <h1>Wall Ball</h1>
     <h2>Use arrow keys to move</h2>
+    <h3>Click anywhere to start music</h3>
     <canvas id="gameCanvas" width="500" height="300"></canvas>
     
     <!-- Audio element -->
