--- a/HW-12/index.html
+++ b/HW-12/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Robot Factory Game</title>
   <style>
-    canvas { border: 1px solid black; }
+    canvas {
+      border: 1px solid black;
+    }
   </style>
 </head>
 <body>
