--- a/HW-12/index.html
+++ b/HW-12/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <p>🎮 Use the arrow keys to move the blue player and collect yellow robot parts!</p>
+  <p>Use the arrow keys to move the blue player and collect yellow robot parts</p>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="game.js"></script>
 </body>
