--- a/HW-13/index.html
+++ b/HW-13/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Phaser Game</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   <style>
-    body { margin: 0; }
-    canvas { display: block; margin: 0 auto; }
+    body { margin: 0; padding: 0; }
+    canvas { display: block; margin: auto; }
   </style>
 </head>
 <body>
-
-  <!-- Link to your separate game.js file -->
   <script src="game.js"></script>
-
 </body>
 </html>
