--- a/HW-13/index.html
+++ b/HW-13/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Phaser Game</title>
+  <meta charset="UTF-8" />
+  <title>Platformer Game</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   <style>
     body { margin: 0; padding: 0; }
-    canvas { display: block; margin: auto; }
+    canvas { display: block; margin: 0 auto; }
   </style>
 </head>
 <body>
