--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -1,84 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <title>GLB Model Viewer</title>
-  <style>
-    body {
-      margin: 0;
-    }
-
-    canvas {
-      display: block;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Three.js Ice Structure</title>
+  <script src="js/three.min.js"></script> <!-- Include the three.js library -->
+  <link rel="stylesheet" href="css/styles.css"> <!-- Optional CSS file -->
 </head>
-
 <body>
-
-  <!-- Use ES Modules by setting the type attribute to module -->
-  <script type="module">
-    import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
-    import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/loaders/GLTFLoader.js';
-    import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/js/controls/OrbitControls.js';
-
-    // Set up the scene
-    var scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x222222);
-
-    // Set up the camera
-    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 1.5, 4);
-
-    // Set up the renderer
-    var renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Set up OrbitControls for camera movement
-    var controls = new OrbitControls(camera, renderer.domElement);
-    controls.enableDamping = true;
-
-    // Add some lights to the scene
-    var light = new THREE.AmbientLight(0xffffff, 0.5);
-    scene.add(light);
-    var pointLight = new THREE.PointLight(0xffffff, 1);
-    pointLight.position.set(5, 5, 5);
-    scene.add(pointLight);
-
-    // Load your GLB model
-    var loader = new GLTFLoader();
-    loader.load(
-      './models/box.glb', // Update this with your correct model path
-      function (gltf) {
-        var model = gltf.scene;
-        model.scale.set(1, 1, 1);
-        scene.add(model);
-      },
-      undefined,
-      function (error) {
-        console.error('Error loading model:', error);
-      }
-    );
-
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      controls.update(); // Update camera controls
-      renderer.render(scene, camera); // Render the scene
-    }
-
-    animate();
-
-    // Handle window resizing
-    window.addEventListener('resize', function () {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-    });
-  </script>
-
+  <script src="js/main.js"></script> <!-- Your custom JavaScript file -->
 </body>
-
 </html>
