--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Three.js Ice Structure</title>
-  <script src="js/three.min.js"></script> <!-- Include the three.js library -->
-  <link rel="stylesheet" href="css/styles.css"> <!-- Optional CSS file -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Three.js Homework</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+
+  <!-- ✅ Load Three.js and GLTFLoader -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-  <script src="js/main.js"></script> <!-- Your custom JavaScript file -->
+
+  <!-- ✅ Place this LAST so THREE is already defined -->
+  <script src="script.js"></script>
 </body>
 </html>
