--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -1,57 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Three.js Homework 14</title>
-  <style>
-    body { margin: 0; }
-    canvas { display: block; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Three.js Rotation</title>
+    <style>
+        body { margin: 0; overflow: hidden; }
+        canvas { display: block; }
+    </style>
 </head>
 <body>
-  <!-- Load Three.js -->
-  <script src="https://unpkg.com/three@0.159.0/build/three.min.js"></script>
-  
-  <script>
-    // Set up scene, camera, renderer
-    var scene = new THREE.Scene();
-    var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    var renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
 
-    // Create cube
-    var geometry = new THREE.BoxGeometry();
-    var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-    var cube = new THREE.Mesh(geometry, material);
-    scene.add(cube);
+    <!-- Import Three.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
-    // Create blue line
-    var lineMaterial = new THREE.LineBasicMaterial({ color: 0x0000ff });
-    var linePoints = [];
-    linePoints.push(new THREE.Vector3(-10, 0, 0));
-    linePoints.push(new THREE.Vector3(0, 10, 0));
-    linePoints.push(new THREE.Vector3(10, 0, 0));
-    var lineGeometry = new THREE.BufferGeometry().setFromPoints(linePoints);
-    var line = new THREE.Line(lineGeometry, lineMaterial);
-    scene.add(line);
+    <script>
+        // Step 1: Set up the scene
+        const scene = new THREE.Scene();
 
-    // Set camera position
-    camera.position.z = 5;
+        // Step 2: Create a camera (the perspective you’ll view the scene from)
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 50;
 
-    // Animation loop
-    function animate() {
-      requestAnimationFrame(animate);
-      
-      // Rotate cube
-      cube.rotation.x += 0.01;
-      cube.rotation.y += 0.01;
+        // Step 3: Create the WebGL renderer (renders the scene to the screen)
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement); // Add the renderer to the HTML page
 
-      // Render the scene
-      renderer.render(scene, camera);
-    }
+        // Step 4: Create basic shapes
+        // Create a cube
+        const geometryCube = new THREE.BoxGeometry(10, 10, 10); // Size of the cube
+        const materialCube = new THREE.MeshBasicMaterial({ color: 0x00ff00 }); // Green material
+        const cube = new THREE.Mesh(geometryCube, materialCube);
+        scene.add(cube); // Add the cube to the scene
 
-    animate();
-  </script>
+        // Create a sphere
+        const geometrySphere = new THREE.SphereGeometry(10, 32, 32); // Size of the sphere
+        const materialSphere = new THREE.MeshBasicMaterial({ color: 0x0000ff }); // Blue material
+        const sphere = new THREE.Mesh(geometrySphere, materialSphere);
+        sphere.position.x = 20; // Position the sphere to the right of the cube
+        scene.add(sphere); // Add the sphere to the scene
+
+        // Create a cylinder
+        const geometryCylinder = new THREE.CylinderGeometry(5, 5, 20, 32); // Radius, radius, height, segments
+        const materialCylinder = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // Red material
+        const cylinder = new THREE.Mesh(geometryCylinder, materialCylinder);
+        cylinder.position.x = -20; // Position the cylinder to the left of the cube
+        scene.add(cylinder); // Add the cylinder to the scene
+
+        // Step 5: Animation loop (rotate the shapes)
+        function animate() {
+            requestAnimationFrame(animate); // Keep calling animate for smooth rendering
+
+            // Rotate shapes (cube, sphere, and cylinder)
+            cube.rotation.x += 0.01; // Rotate the cube
+            cube.rotation.y += 0.01;
+
+            sphere.rotation.x += 0.01; // Rotate the sphere
+            sphere.rotation.y += 0.01;
+
+            cylinder.rotation.x += 0.01; // Rotate the cylinder
+            cylinder.rotation.y += 0.01;
+
+            // Step 6: Render the scene with the camera
+            renderer.render(scene, camera);
+        }
+
+        animate(); // Start the animation loop
+
+        // Adjust the renderer size if the window is resized
+        window.addEventListener('resize', () => {
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+        });
+    </script>
 </body>
 </html>
