--- a/HW-15/index.html
+++ b/HW-15/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Trivia Game</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="quiz.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trivia Platformer Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Trivia Game</h1>
-  <button id="startBtn">Start Quiz</button>
-  <div id="quizArea"></div>
+  <h1>Trivia Platformer Game</h1>
+  
+  <div id="game-container">
+    <div id="player"></div>
+    <div id="platform"></div>
+    <div id="question-container" class="hidden">
+      <p id="question">What is 2 + 2?</p>
+      <button id="answer-1">3</button>
+      <button id="answer-2">4</button>
+      <button id="answer-3">5</button>
+    </div>
+    <div id="score">Score: 0</div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="game.js"></script>
 </body>
 </html>
