--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Platformer Trivia Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trivia Platformer Game</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   <style>
-    body { margin: 0; padding: 0; }
+    body { margin: 0; padding: 0; background-color: #000; }
     canvas { display: block; margin: 0 auto; }
   </style>
 </head>
 <body>
+  <h1 style="text-align: center; color: #fff;">Trivia Platformer Game</h1>
+  <p style="text-align: center; color: #ccc;">Use arrow keys to move and space to jump. Reach the trivia area to answer questions!</p>
+
   <script src="game.js"></script>
 </body>
 </html>
