--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -15,7 +15,10 @@
   <!-- jQuery-controlled Restart Button -->
   <button id="restart-button" style="display: none;">Restart Game</button>
 
-  <script src="phaser.min.js"></script>
+  <!-- Load Phaser script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
+  
+  <!-- Load game.js script -->
   <script src="game.js"></script>
 </body>
 </html>
