--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -5,6 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phaser Game with jQuery</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    #instructions {
+      font-size: 18px;
+      color: #fff;
+      text-align: center;
+      margin-top: 10px;
+    }
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+  </style>
 </head>
 <body>
   <!-- Game Canvas -->
@@ -12,13 +25,15 @@
     <canvas id="phaser-game"></canvas>
   </div>
 
+  <!-- Instructions -->
+  <div id="instructions">
+    Use arrow keys to move. Press spacebar to shoot.
+  </div>
+
   <!-- jQuery-controlled Restart Button -->
   <button id="restart-button" style="display: none;">Restart Game</button>
 
-  <!-- Load Phaser script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-  
-  <!-- Load game.js script -->
+  <script src="phaser.min.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
