--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -5,41 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phaser Game with jQuery</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <style>
-    body {
-      background-color: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    #instructions {
-      font-size: 16px;
-      color: #fff;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    #game-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
-    canvas {
-      display: block;
-    }
-  </style>
 </head>
 <body>
-  <!-- Instructions -->
-  <div id="instructions">
-    Use arrow keys to move. Press spacebar to shoot.
-  </div>
-
   <!-- Game Canvas -->
   <div id="game-container">
     <canvas id="phaser-game"></canvas>
@@ -48,7 +15,10 @@
   <!-- jQuery-controlled Restart Button -->
   <button id="restart-button" style="display: none;">Restart Game</button>
 
-  <script src="phaser.min.js"></script>
+  <!-- Load Phaser script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
+  
+  <!-- Load game.js script -->
   <script src="game.js"></script>
 </body>
 </html>
