--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -5,8 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phaser Game with jQuery</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    #instructions {
+      font-size: 14px;
+      color: #000;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Simple Instructions -->
+  <div id="instructions">Use arrow keys to move. Press spacebar to shoot.</div>
+
   <!-- Game Canvas -->
   <div id="game-container">
     <canvas id="phaser-game"></canvas>
@@ -15,10 +27,7 @@
   <!-- jQuery-controlled Restart Button -->
   <button id="restart-button" style="display: none;">Restart Game</button>
 
-  <!-- Load Phaser script -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
-  
-  <!-- Load game.js script -->
+  <script src="phaser.min.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
