--- a/HW-Final/index.html
+++ b/HW-Final/index.html
@@ -7,10 +7,6 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-
-  <!-- Simple Instructions -->
-  <div id="instructions">Use arrow keys to move. Press spacebar to shoot.</div>
-
   <!-- Game Canvas -->
   <div id="game-container">
     <canvas id="phaser-game"></canvas>
@@ -19,7 +15,10 @@
   <!-- jQuery-controlled Restart Button -->
   <button id="restart-button" style="display: none;">Restart Game</button>
 
-  <script src="phaser.min.js"></script>
+  <!-- Load Phaser script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
+  
+  <!-- Load game.js script -->
   <script src="game.js"></script>
 </body>
 </html>
